2021-10-31  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* figurate.tcl: Evaluate various "figurate" numbers (new package, ticket f8adb7a036)
	* figurate.test: Corresponding tests
	* figurate.man: Description of the figurate procedures
	* pkgIndex.tcl: Added the new package

2021-05-29  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* elliptic.tcl: Correct the implementation of "dn" (ticket 828109660d)
	* elliptic.test: Add proper tests for sn, cn and dn
	* special.tcl: Update the version to 0.5.2
	* pkgIndex.tcl: Updated the version of math::special to 0.5.2

2021-05-06  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* elliptic.tcl: Correct the name of "dn" (ticket f46d2826b59f540296e76586570c86d07a4a5cec)
	* special.tcl: Changed version of math::special to 0.5.1
	* pkgIndex.tcl: Changed version of math::special to 0.5.1

2021-03-14  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* decimal.tcl: Apply patch for fromstr, version 1.0.4 (ticket d159e101f329682a232aabac36c0ef6640ff8484)
	* decimal.test: Added test for this ticket
	* primes.tcl: Added procedures for returning pairs and lists of primes (ticket 0ce5a9fc98f7c752d4dabc0911dccfb513686ad2)
	* primes.test: Added tests for the new procedures
	* numtheory.man: Description of the new procedures
	* numtheory.tcl: Updated version to 1.1.3
	* pkgIndex.tcl: Updated the version for math::decimal and math::numtheory
	* fourier.man: Updated the introduction as per ticket 2695827

2021-03-07  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* various man files: Require Tcl 8.6 and TclOO

2021-01-31  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* combinatoricsExt.tcl: Extension of the collection of combinatorial procedures
	* combinatoricsExt.test: Tests for the new procedures
	* combinatorics.man: Description of the new procedures
	* pkgIndex.tcl: Added the package math::combinatorics

2021-01-03  Arjen Markus <arjenmarkus@users.sourceforge.net>